<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context="xyz.przedszkole.eprzedszkole.View.UI.LoginActivity">

    <ImageView
        android:id="@+id/loginLogo"
        android:layout_width="170dp"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@drawable/logo" />

    <android.support.v7.widget.CardView
        android:id="@+id/emailCardView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/loginInputHeight"
        android:layout_below="@+id/loginLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/colorElements"
        app:cardCornerRadius="@dimen/cardViewCornerRadius"
        app:cardElevation="@dimen/cardViewElevation"
        app:contentPadding="@dimen/cardViewTextContentPadding">

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:background="@color/colorElements"
            android:drawableStart="@drawable/ic_login_email"
            android:text="@string/default_email"
            android:hint="@string/loginEmail_hint"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorFont"
            android:fontFamily="monospace"
            android:textSize="@dimen/loginInputTextSize"
            android:textCursorDrawable="@null"

            />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/passwordCardView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/loginInputHeight"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/emailCardView"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/colorElements"
        app:cardCornerRadius="@dimen/cardViewCornerRadius"
        app:cardElevation="@dimen/cardViewElevation"
        app:contentPadding="@dimen/cardViewTextContentPadding"
        >

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/ic_login_password"
            android:text="@string/default_password"
            android:hint="@string/loginPassword_hint"
            android:inputType="textPassword"
            android:textColor="@color/colorFont"
            android:fontFamily="monospace"
            android:textSize="@dimen/loginInputTextSize"
            />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/logInCardView"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/passwordCardView"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="100dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/colorSmallComponents"
        app:cardCornerRadius="@dimen/cardViewCornerRadius"
        app:cardElevation="@dimen/cardViewElevation">

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:fontFamily="monospace"
            android:text="@string/loginButtonText"
            android:textColor="@color/colorFont"
            android:textAllCaps="false"/>
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/infoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logInCardView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/loginInfoText"
        android:textSize="@dimen/loginInputTextSize"/>

        <ImageButton
            android:id="@+id/twitterLoginImageButton"
            android:layout_width="@dimen/loginWaysImageWidth"
            android:layout_height="@dimen/loginWaysImageHeight"
            android:layout_below="@id/infoTextView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:alpha="@dimen/disableAlpha"
            android:padding="0dp"
            android:scaleType="fitCenter"
            android:src="@drawable/twitter_logo" />

        <ImageButton
            android:id="@+id/facebookLoginImageButton"
            android:layout_width="@dimen/loginWaysImageWidth"
            android:layout_height="@dimen/loginWaysImageHeight"
            android:layout_alignTop="@id/twitterLoginImageButton"
            android:layout_marginEnd="20dp"
            android:layout_toStartOf="@id/twitterLoginImageButton"
            android:alpha="@dimen/disableAlpha"
            android:padding="0dp"
            android:scaleType="fitCenter"
            android:src="@drawable/facebook_logo" />

        <ImageButton
            android:id="@+id/googleLoginImageButton"
            android:layout_width="@dimen/loginWaysImageWidth"
            android:layout_height="@dimen/loginWaysImageHeight"
            android:layout_alignTop="@id/twitterLoginImageButton"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@id/twitterLoginImageButton"
            android:alpha="@dimen/disableAlpha"
            android:padding="0dp"
            android:scaleType="fitCenter"
            android:src="@drawable/google_logo" />

</RelativeLayout>
